--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -1,6 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <TextView
+        android:text="设置中心"
+        style="@style/topTextView" />
+    <!---->
+    <com.app.phonesafe.view.SettingItemView
+        android:id="@+id/siv_update"
+        xmlns:phonesafe="http://schemas.android.com/apk/res/com.app.phonesafe"
+        phonesafe:destitle="自动更新设置"
+        phonesafe:deson="自动更新已开启"
+        phonesafe:desoff="自动更新已关闭"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </com.app.phonesafe.view.SettingItemView>
+    <com.app.phonesafe.view.SettingItemView
+        android:id="@+id/siv_findAddr"
+        xmlns:phonesafe="http://schemas.android.com/apk/res/com.app.phonesafe"
+        phonesafe:destitle="电话归属地的显示设置"
+        phonesafe:desoff="归属地的显示已关闭"
+        phonesafe:deson="归属地的显示已开启"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </com.app.phonesafe.view.SettingItemView>
+
+
+
+
 
 </LinearLayout>
