--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,3 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <declare-styleable name="com.app.phonesafe.view.SettingItemView">
+        <attr name="destitle" format="string"/>
+        <attr name="desoff" format="string"/>
+        <attr name="deson" format="string"/>
+    </declare-styleable>
 </resources>
