--- a/app/src/main/res/layout/activity_setup3.xml
+++ b/app/src/main/res/layout/activity_setup3.xml
@@ -5,30 +5,22 @@
     android:layout_height="match_parent">
     <TextView
         style="@style/TitleStyle"
-        android:text="3,设置安全号码"/>
-    <TextView
+        android:text="4,恭喜您,设置完成"/>
+    <CheckBox
+        android:id="@+id/cb_box"
+        android:text="您没有开启防盗保护"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="#000"
-        android:textSize="18sp"
-        android:layout_margin="5dp"
-        android:text="sim变更后\n就会发送报警短信至安全号码"/>
-    <EditText
-        android:id="@+id/et_phone_number"
-        android:hint="请输入电话号码"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-    <Button
-        android:id="@+id/bt_select_number"
-        android:background="@drawable/selector_number_btn_bg"
-        android:text="选择联系人"
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <!-- 让内部点的控件水平居中 -->
     <LinearLayout
         android:gravity="center_horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+        <ImageView
+            android:background="@android:drawable/presence_invisible"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
         <ImageView
             android:background="@android:drawable/presence_invisible"
             android:layout_width="wrap_content"
@@ -41,23 +33,21 @@
             android:background="@android:drawable/presence_online"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
-        <ImageView
-            android:background="@android:drawable/presence_invisible"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
     </LinearLayout>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <ImageView
-            android:background="@drawable/bind"
+            android:background="@drawable/phone"
             android:layout_centerInParent="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <!-- 图片选择器,在选中和未选中的过程中,切换展示图片 -->
         <Button
+            android:id="@+id/bt_pre3"
             style="@style/preBtn"/>
         <Button
+            android:id="@+id/bt_next4"
             style="@style/nextBtn"/>
     </RelativeLayout>
 
