--- a/app/src/main/res/layout/contact_item.xml
+++ b/app/src/main/res/layout/contact_item.xml
@@ -1,6 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#fff">
+    <TextView
+        android:id="@+id/tv_contact_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="#000"
+        android:text="name"
+        android:textSize="25sp"/>
+    <TextView
+        android:id="@+id/tv_contact_num"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="17862701806"
+        android:textColor="#000"
+        android:textSize="20sp"/>
 
 </LinearLayout>
