--- a/app/src/main/res/drawable/rocket_bg.xml
+++ b/app/src/main/res/drawable/rocket_bg.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<animation-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:drawable="@drawable/desktop_rocket_launch_1"
+        android:duration="200"/>
+    <item android:drawable="@drawable/desktop_rocket_launch_2"
+        android:duration="200"/>
+</animation-list>
