--- a/app/src/main/res/layout/activity_toast_location.xml
+++ b/app/src/main/res/layout/activity_toast_location.xml
@@ -1,6 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#accc">
+    <ImageView
+        android:id="@+id/iv_drag"
+        android:background="@drawable/drag"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/bt_top"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="按中提示框拖拽到任意位置"
+        android:gravity="center"
+        android:background="@drawable/call_locate_blue"
+        android:visibility="gone"/>
+    <Button
+        android:layout_alignParentBottom="true"
+        android:id="@+id/bt_bottom"
+        android:layout_width="match_parent"
+        android:text="按中提示框拖拽到任意位置"
+        android:gravity="center"
+        android:visibility="visible"
+        android:background="@drawable/call_locate_blue"
+        android:layout_height="wrap_content"/>
 
-</LinearLayout>
+</RelativeLayout>
