--- a/app/src/main/res/layout/rocket_view.xml
+++ b/app/src/main/res/layout/rocket_view.xml
@@ -2,5 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <!-- 喷气效果,尾焰效果 -->
+    <ImageView
+        android:id="@+id/iv_rocket"
+        android:background="@drawable/rocket_bg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
