--- a/app/src/main/res/layout/setting_click_view.xml
+++ b/app/src/main/res/layout/setting_click_view.xml
@@ -8,14 +8,12 @@
         android:layout_height="wrap_content">
         <TextView
             android:id="@+id/tv_title"
-            android:textColor="#000"
             android:textSize="18sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <TextView
             android:id="@+id/tv_des"
-            android:layout_below="@id/tv_des"
-            android:textColor="#000"
+            android:layout_below="@id/tv_title"
             android:textSize="18sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
@@ -25,7 +23,8 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            />
         <View
             android:background="#000"
             android:layout_below="@id/tv_des"
