--- a/app/src/main/res/layout/activity_atool.xml
+++ b/app/src/main/res/layout/activity_atool.xml
@@ -16,6 +16,16 @@
         android:background="@drawable/selector_atool_item_bg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+    <TextView
+        android:id="@+id/tv_sms_backup"
+        android:padding="5dp"
+        android:text="短信备份"
+        android:gravity="center"
+        android:textSize="18sp"
+        android:drawableLeft="@android:drawable/btn_star"
+        android:background="@drawable/selector_atool_item_bg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
 
 </LinearLayout>
