--- a/app/src/main/res/layout/activity_atool.xml
+++ b/app/src/main/res/layout/activity_atool.xml
@@ -26,6 +26,26 @@
         android:background="@drawable/selector_atool_item_bg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+    <TextView
+        android:id="@+id/tv_common_number"
+        android:padding="5dp"
+        android:text="常用号码使用"
+        android:gravity="center"
+        android:textSize="18sp"
+        android:drawableLeft="@android:drawable/btn_star"
+        android:background="@drawable/selector_atool_item_bg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+    <TextView
+        android:id="@+id/tv_app_lock"
+        android:padding="5dp"
+        android:text="程序锁"
+        android:gravity="center"
+        android:textSize="18sp"
+        android:drawableLeft="@android:drawable/btn_star"
+        android:background="@drawable/selector_atool_item_bg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
 
 </LinearLayout>
